--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
     background-color: #f5f5f5;
     color: #222;
 }
+h1 {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 2.5em;
+    color: #333;
+}
 
 table {
     border-collapse: collapse;
